2.x (#378)
Update PIH EMR to OpenMRS 2.5.5